--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
   },
   "homepage": "https://github.com/schuyler1d/encrypted-post#readme",
   "devDependencies": {
+    "css-loader": "^2.1.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "jquery": "^3.3.1",
     "jsencrypt": "^3.0.0-rc.1"
   }
