--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
