--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "git-revision-webpack-plugin": "^3.0.3",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
