--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/schuyler1d/encrypted-post#readme",
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "git-revision-webpack-plugin": "^3.0.3",
+    "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.1",
