new public key for new laptop and tweak on terminal shortcut

--- a/shortcuts/decrypt.desktop
+++ b/shortcuts/decrypt.desktop
@@ -2,6 +2,6 @@
 Name=Open NEXT Decryptor
 Comment=Open browser for decryption
 Exec=firefox ~/encrypted-post/dist/decrypt/index.html
-Terminal=true
+Terminal=false
 Type=Application
 StartupNotify=false
